Migrating from Ingress to K8s Gateway API/gw-api/httproute-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: banking-app
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Controller
                value: ISTIO
      backendRefs:
        - name: dashboard
          port: 3000
