Migrating from Ingress to K8s Gateway API/gw-api/httproute-profile.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profile-route
  namespace: banking-app
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Controller
                value: ISTIO
      backendRefs:
        - name: profile
          port: 8081
